<resources>
    <string name="app_name">MyLittleHeroESGI</string>
    <string name="hello_world">Hello World !</string>
    <string name="activity_home_start_btn">START</string>
    <string name="activity_create_player_title">Create player</string>
    <string name="activity_create_player_pseudo_hint">Pseudo</string>
    <string name="activity_create_player_radio_button_male">male</string>
    <string name="activity_create_player_radio_button_female">female</string>
    <string name="activity_create_player_birthdate_hint">Birthdate</string>
    <string name="activity_create_player_next_button">NEXT</string>
    <string name="choose_your_weapon">Choose your weapon</string>
    <string name="activity_choose_weapon_next_btn">next</string>
    <string name="recapitulatif_title_name">Resume</string>
</resources>
