<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.CreatePlayerActivity"
    >

  <ImageView
      android:layout_width="120dp"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:layout_marginTop="50dp"
      android:adjustViewBounds="true"
      android:src="@drawable/logo"
      />

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="50dp"
      android:gravity="center"
      android:text="@string/activity_create_player_title"
      android:textColor="@color/colorPrimary"
      android:textSize="20sp"
      android:textStyle="bold"
      />

  <EditText
      android:id="@+id/activity_create_player_pseudo_edt"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginEnd="20dp"
      android:layout_marginStart="20dp"
      android:layout_marginTop="20dp"
      android:hint="@string/activity_create_player_pseudo_hint"
      android:inputType="text"
      />

  <RadioGroup
      android:id="@+id/activity_create_player_gender_gr"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginEnd="20dp"
      android:layout_marginStart="20dp"
      android:layout_marginTop="20dp"
      android:orientation="horizontal"
      >
    <RadioButton
        android:id="@+id/activity_create_player_radio_button_male"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_create_player_radio_button_male"
        />
    <RadioButton
        android:id="@+id/activity_create_player_radio_button_female"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_create_player_radio_button_female"
        />
  </RadioGroup>

  <EditText
      android:id="@+id/activity_create_player_birthdate_edt"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginEnd="20dp"
      android:layout_marginStart="20dp"
      android:layout_marginTop="20dp"
      android:clickable="true"
      android:focusable="false"
      android:hint="@string/activity_create_player_birthdate_hint"
      />


  <Button
      android:id="@+id/activity_create_player_next_btn"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginEnd="20dp"
      android:layout_marginStart="20dp"
      android:layout_marginTop="20dp"
      android:text="@string/activity_create_player_next_button"
      />
</LinearLayout>